Change the consent warning to avoid page jumping when accepting

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -452,8 +452,8 @@ select {
 }
 
 .hashtags {
-  font-size: 0.8em;
-  margin-top: 0.4em;
+  font-size: 0.75em;
+  margin-top: 0.6em;
 }
 
 @media only screen and (max-width: 599px) {
